--- a/Changes
+++ b/Changes
@@ -1,9 +1,20 @@
 Revision history for Perl extension SWFEditor
 
+0.03_01
+    2012-04-11
+        - fix Makefile.PL
+        - add some test
+        - add func replace_mld_data
+        - fix some leak bug
+        - fix pod
+
+0.03
+    2012-04-07
+        - fix MANIFEST
+
 0.02_01
     2012-04-06
         - add MANIFEST.SKIP
-        - fix MANIFEST
 
 0.02
     2012-04-06
